--- a/resebo-backup-system.service
+++ b/resebo-backup-system.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=pins2 Backup: System
+Description=resebo Backup: System
 Requires=network-online.target
 After=network-online.target
 
@@ -12,9 +12,9 @@ Type=simple
 Restart=on-failure
 RestartSec=60s
 
-EnvironmentFile=/etc/pins2-backup
+EnvironmentFile=/etc/resebo-backup
 ExecStart=/usr/local/bin/blocking-systemd-inhibit \
-  --who="pins2 Backup" \
-  --why="pins2 backup syncing" \
+  --who="resebo Backup" \
+  --why="resebo backup syncing" \
   --what=sleep \
-  -- /usr/local/bin/pins2-backup archive system /
+  -- /usr/local/bin/resebo-backup archive system /
