--- a/resebo-backup.env
+++ b/resebo-backup.env
@@ -1,2 +1,4 @@
-# BORG_REPO="resebo@resebo.lan:/srv/resebo1/..."
+# BORG_REPO="resebo@resebo.lan:/srv/pins21/borg-repo"
 # BORG_PASSPHRASE="...."
+# BACKUP_ROOT="/srv/data"
+# BACKUP_PATHS="./other ./supersau-backup ./time-machine ./services ./home"
